# nvibrant-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nvibrant_tui/: __main__.py  app.py  autostart.py  backend.py  config.py
tests/: test_app.py  test_backend.py  test_config.py
